--- a/ternary plot.ipynb
+++ b/ternary plot.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,13 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9eaff6bb4b5466e9b44bedc7b744807",
+       "model_id": "5e487e30a36a4f028369b92ff095d4e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,6 +257,15 @@
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "ternary_rules(150, save='ternary plots/all_rhombus_big.png', restr=False, invAB=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ternary_rules(150, save='ternary plots/all_rhombus_big.png', restr=False)"
    ]
